--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" >
+    <title>Lan Tabur</title>
 </head>
 <body>
-    <p>Lan Tabur</p>
+    <img src="./assets/logo.png" alt="" style="padding-top: 20px; display: block; margin-left: auto; margin-right: auto; width: 25%; height: 10%;">
+    <h1 style="text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 100;"> Lan Tabur Website</h1>
+    <h2 style="text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 100;">Website is under development by <a href="https://github.com/Avei20 ">Avei</a></h2>
 </body>
 </html>
