--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.ico" >
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style/index.css">
     <title>Lan Tabur</title>
 </head>
 <body>
-    <img src="./assets/logo.png" alt="" style="padding-top: 20px; display: block; margin-left: auto; margin-right: auto; width: 25%; height: 10%;">
+    <!-- <img src="./assets/logo.png" alt="" style="padding-top: 20px; display: block; margin-left: auto; margin-right: auto; width: 25%; height: 10%;">
     <h1 style="text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 100;"> Lan Tabur Website</h1>
-    <h2 style="text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 100;">Website is under development by <a href="https://github.com/Avei20 ">Avei</a></h2>
+    <h2 style="text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 100;">Website is under development by <a href="https://github.com/Avei20 ">Avei</a></h2> -->
+    <div class="container-login">
+        <img src="./assets/logo.png" class="col img-fluid">
+        <div class="g-5 container login-info col-7 justify-content-center align-self-center " >
+            <input type="text" name="User Name" id="" class="row">
+            <input type="password" name="Password " id="" class="row">
+        </div>
+    </div>
+    <!-- Bootstrap + Popper  -->
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
