--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -32,7 +32,7 @@
                         <label for="password" class="form-label">Password</label>
                     </div>
                     <div class="row text-center px-3 mb-3">
-                        <button class="btn btn-outline-light px-5 mb-3 ">MASUK</button>
+                        <button class="btn btn-outline-light px-5 mb-3 " id="btnMasuk" onclick="print()">MASUK</button>
                         <a href="#" class="text-decoration-none text-white">Lupa password ?</a>
                     </div>
                 </div>
@@ -41,5 +41,6 @@
     </div>
     <!-- Bootstrap + Popper  -->
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./script/login.js"></script>
 </body>
 </html>
